# java2015

./: README  README.md
ex01_1/: prime-printer.cabal  shell.nix
ex01_1/src/: Main.hs
ex01_2/: LICENSE  geometry.cabal  shell.nix
ex01_2/src/: Geometry.hs
ex01_2/test/: TestMain.hs
ex02_1/: geometry.cabal
ex02_1/src/Data/Geometry/: Basics.hs  Ellipse.hs  Rectangle.hs
ex02_1/test/: TestMain.hs
ex02_2/: menu.cabal  shell.nix
ex02_2/src/Data/: Menu.hs
ex02_3/: LICENSE  README.md  newsfeed.cabal  shell.nix
ex02_3/src/Data/: Newsfeed.hs
ex02_3/src/Data/Newsfeed/: Pretty.hs
ex02_3/src/Data/Time/Format/: Human.hs
ex02_3/test/: Main.hs
ex04_2/: README.md  bridges.cabal  shell.nix
ex04_2/src/Bridges/: Auto.hs  Bridge.hs  Simulation.hs  Traveller.hs
ex05_1/: rivers.cabal  shell.nix
ex05_1/src/Data/: River.hs
ex05_3/: geometry.cabal  shell.nix
ex05_3/src/Data/Geometry/: Basics.hs  Ellipse.hs  Rectangle.hs  SetOps.hs  Shape.hs  Transformation.hs
ex06_1/: README.md  shell.nix  undo.cabal
ex06_1/src/: Main.hs  Sheet.hs  SpreadSheet.hs
ex06_1/src/Data/Sequence/: Ext.hs
ex07_1/: arith.cabal  shell.nix
ex07_1/src/: Arith.hs
ex07_2/: bool.cabal  shell.nix
ex07_2/src/: Bool.hs
ex09_1/: pairs.cabal
ex09_1/src/: Pair.hs
ex10_1/: README.md  stream.cabal
ex10_1/src/: Stream.hs
ex10_2/: README.md  iter.cabal
ex10_2/src/: Iter.hs
ex11/: repl.cabal
ex11/src/: List1.hs  Main.hs  MonadRepl.hs  UI.hs
ex11/src/Eval/: AExpr.hs  Common.hs  Env.hs  Stmt.hs  Token.hs
