name:                geometry
version:             0.1.0.0
synopsis:            Haskell interpretation of ex01_2
-- description:         
homepage:            https://github.com/JLimperg/java2015
license:             MIT
license-file:        LICENSE
author:              Jannis Limperg
maintainer:          jannis@limperg.de
copyright:           (c) 2015 Jannis Limperg
category:            Education
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Geometry
  -- other-modules:       
  other-extensions:    RecordWildCards
                     , CPP
  build-depends:       base ==4.8.*
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite geometry-tests
  type:                exitcode-stdio-1.0
  build-depends:       base ==4.8.*
                     , tasty ==0.10.*
                     , tasty-quickcheck ==0.8.*
  hs-source-dirs:      src
  main-is:             TestMain.hs
  default-language:    Haskell2010
  cpp-options:         -D TEST
