name:                menu
version:             0.1.0.0
synopsis:            Haskell interpretation of ex02_2
-- description:         
homepage:            https://github.com/JLimperg/java2015
license:             MIT
license-file:        LICENSE
author:              Jannis Limperg
maintainer:          jannis@limperg.de
copyright:           (c) 2015 Jannis Limperg
category:            Education
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.Menu
  -- other-modules:       
  other-extensions:    TemplateHaskell
                     , RankNTypes
                     , GeneralizedNewtypeDeriving
  build-depends:       base >= 4.7 && < 4.9
                     , containers ==0.5.*
                     , lens-family-core ==1.2.*
                     , lens-family-th ==0.4.*
  hs-source-dirs:      src
  default-language:    Haskell2010
