name:                newsfeed
version:             0.1.0.0
synopsis:            Haskell interpretation of ex02_3
-- description:         
homepage:            https://github.com/JLimperg/java2015
license:             MIT
license-file:        LICENSE
author:              Jannis Limperg
maintainer:          jannis@limperg.de
copyright:           (c) 2015 Jannis Limperg
category:            Education
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.Newsfeed
                     , Data.Newsfeed.Pretty
  -- other-modules:       
  other-extensions:    TemplateHaskell
                     , RankNTypes
                     , ScopedTypeVariables
  build-depends:       base ==4.8.*
                     , time ==1.5.*
                     , containers ==0.5.*
                     , lens-family ==1.2.*
                     , lens-family-th ==0.4.*
                     , old-locale
                     , pretty ==1.1.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable test-newsfeed
  main-is:             Main.hs
  other-extensions:    TemplateHaskell
                     , RankNTypes
                     , ScopedTypeVariables
  build-depends:       base ==4.8.*
                     , time ==1.5.*
                     , containers ==0.5.*
                     , lens-family ==1.2.*
                     , lens-family-th ==0.4.*
                     , old-locale
                     , pretty ==1.1.*
  hs-source-dirs:      src, test
  default-language:    Haskell2010
  ghc-options:         -Wall
