name:                geometry
version:             0.1.0.0
synopsis:            Haskell interpretation of ex05_2 and ex05_3
-- description:         
homepage:            https://github.com/JLimperg/java2015
license:             MIT
license-file:        LICENSE
author:              Jannis Limperg
maintainer:          jannis@limperg.de
copyright:           (c) 2015 Jannis Limperg
category:            Education
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.Geometry.Basics
                     , Data.Geometry.Ellipse
                     , Data.Geometry.Rectangle
                     , Data.Geometry.Shape
                     , Data.Geometry.SetOps
                     , Data.Geometry.Transformation
  -- other-modules:       
  other-extensions:    RecordWildCards
                     , CPP
                     , PatternSynonyms
  build-depends:       base >= 4.7 && < 4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-incomplete-patterns

test-suite geometry-tests
  type:                exitcode-stdio-1.0
  build-depends:       base >= 4.7 && < 4.9
                     , tasty ==0.10.*
                     , tasty-quickcheck ==0.8.*
  hs-source-dirs:      src, test
  main-is:             TestMain.hs
  default-language:    Haskell2010
  cpp-options:         -D TEST
  ghc-options:         -Wall
