name:                undo
version:             0.1.0.0
synopsis:            Haskell interpretation of ex06_1
-- description:         
homepage:            https://github.com/JLimperg/java2015
license:             MIT
license-file:        LICENSE
author:              Jannis Limperg
maintainer:          jannis@limperg.de
copyright:           (c) 2015 Jannis Limperg
category:            Education
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     SpreadSheet
  other-extensions:    TupleSections
                     , CPP
                     , GeneralizedNewtypeDeriving
  build-depends:       base >= 4.7 && < 4.9
                     , containers ==0.5.*
                     , text ==1.2.*
                     , primitive ==0.6.*
                     , vector ==0.10.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable undo-example
  main-is:             Main.hs
  other-extensions:    TupleSections
                     , CPP
                     , GeneralizedNewtypeDeriving
  build-depends:       base >= 4.7 && < 4.9
                     , containers ==0.5.*
                     , text ==1.2.*
                     , primitive ==0.6.*
                     , vector ==0.10.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
