name:                bool
version:             0.1.0.0
synopsis:            Haskell interpretation of ex07_2
-- description:         
homepage:            https://github.com/JLimperg/java2015
license:             MIT
license-file:        LICENSE
author:              Jannis Limperg
maintainer:          jannis@limperg.de
copyright:           (c) 2015 Jannis Limperg
category:            Education
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Bool
  --other-extensions:    
  build-depends:       base ==4.8.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
